--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="header__navbar-item header__navbar-user">
                             <img class="data-src" src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.6435-1/p320x320/181800867_967052747363659_8099878409886540905_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=7206a8&_nc_ohc=Zq8GndSxGkQAX8x30Aq&_nc_ht=scontent.fhan3-1.fna&tp=6&oh=9df51e0a31cc3a6a693b07dd5f32b601&oe=60E49EB6" alt="" class="header__navbar-user-img">
                             <div class="header__navbar-user-name">
-                                HieuThichNhi
+                                HieuThich...
                             </div>
                             <div class="header__navbar-user-options">
                                 <a href="" class="header__navbar-user-option-link">
